--- a/2013-2/contents/intro_writing_conference/intro_writing_ieee.tex
+++ b/2013-2/contents/intro_writing_conference/intro_writing_ieee.tex
@@ -45,10 +45,10 @@ Trata-se de uma entidade privada, sem fins lucrativos. A ABNT é membro fundador
 \section{IEEE}
 O \textit{Institute of Electrical and Electronics Engineers} é a maior associação profissional do mundo dedicada a inovação e excelência tecnológica em benefício da humanidade\cite{IEEEAbout}. Possui em torno de 425 mil membros em 160 países e foi fundada em 1963
 
-As normas do IEEE visam tornar padrão as formas de publicação, criando um consenso único em que o foco está no conteúdo e não no texto. Suas políticas também são criadas com base no retorno que essa publicação terá ao autor da obra\cite{IEEECommunicationStandards}.
+As normas do IEEE visam tornar padrão as formas de publicação, criando um consenso único em que o foco está no conteúdo e não no texto. Suas políticas também são criadas com base no retorno que essa publicação terá ao autor da obra.%\cite{IEEECommunicationStandards}.
 
 \section{SBC}
-A SBC (Sociedade Brasileira de Computação) é a sociedade científica sem fins lucrativos, que reúne pesquisadores, professores, estudantes e profissionais da computação. Ela faz parte da SBPC (Sociedade Brasileira para o Progresso da Ciência) e da IFIP (\textit{International Federation for Information Processing})\cite{SBCSobre}.
+A SBC (Sociedade Brasileira de Computação) é a sociedade científica sem fins lucrativos, que reúne pesquisadores, professores, estudantes e profissionais da computação. Ela faz parte da SBPC (Sociedade Brasileira para o Progresso da Ciência) e da IFIP (\textit{International Federation for Information Processing}).%\cite{SBCSobre}.
 
 A Sociedade induz o crescimento de pesquisas científicas na área de Computação, que fundamenta a formação de conhecimento e tecnologia de autenticidade brasileira. Realiza atividades de diversas natureza para a computação no Brasil, além de ter um papel importante na elaboração de políticas para o desenvolvimento de atividade de ensino, pesquisa e disseminação do conhecimento no país\cite{SBCApresentacao}.
 
