--- a/2013-2/handout_latex_2013-2.tex
+++ b/2013-2/handout_latex_2013-2.tex
@@ -7,6 +7,8 @@
 \usepackage[alf]{abntex2cite}
 \usepackage{pdfpages}
 \usepackage{url}
+\usepackage{geometry}
+\usepackage{dashrule}
 \definecolor{dark-gray}{gray}{0.20}
 \definecolor{light-gray}{gray}{0.85}
 
