gancho para o latex em introducao a escrita

--- a/2013-2/contents/intro_writing.tex
+++ b/2013-2/contents/intro_writing.tex
@@ -36,5 +36,7 @@ Observe as diferenças com relação aos elementos de formatação do texto:
 \clearpage
 \restoregeometry}
 
-%Estes são apenas alguns dos detalhes que são exigidos e fica claro que a correta formatação de um documento é um processo que acaba ocupando uma grande parte do tempo dedicado à escrita do mesmo e a utilização de ferramentas que automatizem e facilitem este processo são sempre bem vindas. Uma destas ferramentas é o \LaTeX.
+Tendo em vista todos estes detalhes a serem levados em consideração bem como o fato de que os textos muitas vezes são escritos de maneira apressada devido a prazos curtos, como no caso de artigos ou relatórios de iniciação científica, fica claro que a utilização de ferramentas que automatizem e facilitem este processo serão sempre bem vindas. Uma destas ferramentas é o \LaTeX.
+
+ %Estes são apenas alguns dos detalhes que são exigidos e fica claro que a correta formatação de um documento é um processo que acaba ocupando uma grande parte do tempo dedicado à escrita do mesmo e 
 
