comparacao entre referencias feita de forma sucinta

--- a/2013-2/contents/intro_writing.tex
+++ b/2013-2/contents/intro_writing.tex
@@ -22,6 +22,11 @@ Observe as diferenças com relação aos elementos de formatação do texto:
 % Como exemplo do formato utilizado no padrão de conferências do IEEE, a página \pageref{IEEE} mostra o estilo de formatação necessário para submissão. Este formato é muito requisitado nos congressos internacionais e até mesmo para alguns eventos da SBC.
 
 % No entanto, alguns congressos da SBC utilizam também formato próprio. Esse formato pode ser analisado na página \pageref{SBC}
+
+Além disso, outro detalhe importante é a seção de referências. Cada congresso dispõe de maneiras diferentes para apresentação e citação das mesmas. Após a comparação entre a formatação dos textos, mostram-se as diferenças entre as referências das normas.
+
+Repare como a citação do IEEE, na parte superior, ainda utiliza o formato de duas colunas, possui citação numérica, cita mais do que um autor e mostra maiores informações sobre a publicação em si. A norma da SBC, no meio, se parece mais com o padrão da UTFPR por ambas terem base na ABNT. As citações são por nome do autor e ano da publicação, e com menos informações sobre a obra. Por fim, as normas da UTFPR ressaltam o congresso publicado em negrito, autor todo em maiúsculo e ainda mostra maiores informações de metadados.
+
 {\clearpage
 \label{cabecalhos}
 \newgeometry{left=0cm,bottom=0cm,top=0cm,right=0cm}
@@ -32,6 +37,24 @@ Observe as diferenças com relação aos elementos de formatação do texto:
 %\noindent\hdashrule[0.5ex]{\textwidth}{2pt}{10pt}
 
 \noindent\includegraphics[trim=0 15cm 0 0,clip]{contents/intro_writing_conference/intro_writing_sbc}
+
+\clearpage
+\restoregeometry}
+
+\newpage
+
+{\clearpage
+\label{referencias}
+\newgeometry{left=0cm,bottom=0cm,top=0cm,right=0cm}
+
+\noindent\includegraphics[trim=0 19cm 0 0,clip]{contents/intro_writing_conference/references/ieee-refs}
+
+\hrule
+
+\noindent\includegraphics[trim=0 19cm 0 2cm,clip]{contents/intro_writing_conference/references/sbc-refs}
+
+\hrule
+\noindent\includegraphics[trim=0 20cm 0 0cm,clip]{contents/intro_writing_conference/references/utf-refs}
 
 \clearpage
 \restoregeometry}
