--- a/2013-2/handout_latex_2013-2.tex
+++ b/2013-2/handout_latex_2013-2.tex
@@ -9,6 +9,7 @@
 \usepackage{url}
 \usepackage{geometry}
 \usepackage{dashrule}
+\usepackage{listings}
 \definecolor{dark-gray}{gray}{0.20}
 \definecolor{light-gray}{gray}{0.85}
 
@@ -19,6 +20,10 @@
 \newcommand{\cominline}[1]{
 \colorbox{light-gray}{\texttt{\pbox{\textwidth}{#1}}}
 }
+
+\newcommand{\pdf}{\textsf{.pdf}}
+\newcommand{\dvi}{\textsf{.dvi}}
+\newcommand{\tex}{\textsf{.tex}}
 
 \subjnum{CC31C}
 \subject{Introdução à Ciência da Computação}
