--- a/2013-2/contents/intro_writing.tex
+++ b/2013-2/contents/intro_writing.tex
@@ -47,14 +47,14 @@ Repare como a citação do IEEE, na parte superior, ainda utiliza o formato de d
 \label{referencias}
 \newgeometry{left=0cm,bottom=0cm,top=0cm,right=0cm}
 
-%\noindent\includegraphics[trim=0 19cm 0 0,clip]{contents/intro_writing_conference/references/ieee-refs}
+\noindent\includegraphics[trim=0 19cm 0 0,clip]{contents/intro_writing_conference/references/ieee-refs}
 
 \hrule
 
-%\noindent\includegraphics[trim=0 19cm 0 2cm,clip]{contents/intro_writing_conference/references/sbc-refs}
+\noindent\includegraphics[trim=0 19cm 0 2cm,clip]{contents/intro_writing_conference/references/sbc-refs}
 
 \hrule
-%\noindent\includegraphics[trim=0 20cm 0 0cm,clip]{contents/intro_writing_conference/references/utf-refs}
+\noindent\includegraphics[trim=0 20cm 0 0cm,clip]{contents/intro_writing_conference/references/utf-refs}
 
 \clearpage}
 \restoregeometry
