--- a/2013-2/contents/tex.tex
+++ b/2013-2/contents/tex.tex
@@ -5,7 +5,7 @@ Knuth inicialmente previu que a sua tarefa, que consistia em aprender quais eram
 
 \LaTeX é basedo na filosofia de que autores devem se focar no conteúdo sem precisar se preocupar com a apresentação visual do que estão escrevendo. Desta forma, ao escrever um documento usando \LaTeX, o autor precisa apenas especificar a estrutura lógica de seu texto, na forma de conceitos básicos como capítulos, seções, tabelas, figuras, etc. A apresentação fica a cargo do sistema.
 
-LaTeX can be arbitrarily extended by using the underlying macro language to develop custom formats. Such macros are often collected into packages, which are available to address special formatting issues such as complicated mathematical content or graphics. Indeed, in the example below, the align environment is provided by the amsmath package.
+%LaTeX can be arbitrarily extended by using the underlying macro language to develop custom formats. Such macros are often collected into packages, which are available to address special formatting issues such as complicated mathematical content or graphics. Indeed, in the example below, the align environment is provided by the amsmath package.
 
 \subsection{Funcionamento}
 
@@ -19,5 +19,3 @@ Este trecho de código produz um \pdf\ com esta aparência:
 \noindent\makebox[\textwidth]{\includegraphics[trim= 0 18cm 0 5cm,clip]{contents/exemplo}}
 
 Observe como, no código apresentado, não há nenhuma informação sobre que tipo de fonte utilizar, tamanho da letra, espaçamento entre linhas, posicionamento do título, etc. Estes detalhes são tratados pelo \LaTeX\ e o usuário não precisa se preocupar com eles.
-
-\subsection{Instalação}
