--- a/2013-2/slides_latex_2013-2.tex
+++ b/2013-2/slides_latex_2013-2.tex
@@ -44,9 +44,9 @@ style=paintings
 
 \usepackage[utf8]{inputenc}
 \usepackage{xcolor}
-\title{Introdução ao Linux}
+\title{Introdução ao \LaTeX}
 
-\date{Outubro, 2013}
+\date{Janeiro, 2014}
 
 \newenvironment{vslide}{\vspace{\stretch{1}}}{\vspace{\stretch{1}}}
 
@@ -54,157 +54,98 @@ style=paintings
 \maketitle
 
 %%-------------------------------------------------------------------------------------
-\begin{slide}{Unix}
-\twocolumn{
-%\onslide{2-}{}
-\vspace{1cm}
-Ken Thompson
+\begin{slide}{\Large A escrita científica}
+  \vspace{.2cm}
+  % \twocolumn{
+  \onslide{2-}{Trabalhos para disciplinas}
+  \vspace{1cm}
+  
+  \onslide{3-}{Relatórios de iniciação científica}
+  \vspace{1cm}
+  
+  \onslide{4-}{Artigos científicos}
+  \vspace{1cm}
+  
+  \onslide{5-}{TCC}
+  \vspace{1cm}
 
-\vspace{.5cm}
-Dennis Ritchie
+  \onslide{6-}{Apresentações}
+ \end{slide}
+
+\begin{slide}{\Large As normas, regras, diretrizes}
+  \vspace{.2cm}
+  % \twocolumn{
+  \onslide{2-}{Congressos}
+  \vspace{1.5cm}
+  
+  \onslide{3-}{Professores}
+  \vspace{1.5cm}
+  
+  \onslide{4-}{Banca avaliadora}
+  \vspace{1.5cm}
+  
+  \onslide{5-}{ABNT/SBC/IEEE/ACM}
+\end{slide}
+
+ \begin{slide}{\Large Os detalhes}
+   \vspace{.2cm}
+
+   \twocolumn[lcolwidth=.30\linewidth,rcolwidth=.70\linewidth]{
+   \onslide{2-}{Tipografia}
+  \vspace{1.5cm}
+  
+  \onslide{3-}{Facilidade de leitura}
+  \vspace{1.5cm}
+  
+  \onslide{5-}{Ser entendido}
+  \vspace{1.5cm}
+  
+  \onslide{6-}{Ser ouvido}
 }
 {
-   \begin{figure}[!h]
-  \includegraphics[scale=0.2]{imagens/att}
-   \end{figure}
+        \begin{figure}[!h]
+          \onslide*{2}{ \includegraphics[scale=.14]{resources/typo}}
+          \onslide*{3}{ \includegraphics[scale=.28]{resources/comparison}}
+          \onslide*{4-}{ \includegraphics[scale=.4]{resources/readibility}}
+        \end{figure}        
+
+        \begin{figure}[!h]
+          \onslide*{2}{\includegraphics[scale=.5]{resources/ligature}}
+        \end{figure}
 }
-
-\textbf{Filosofia Unix}:
-\begin{itemize}
-\item Arquivos de texto armazenam dados.
-\item Sistema de arquivos hierárquico.
-\item Tratamento de alguns dispositivos como arquivos.
-\item Programas pequenos se unem para realizar uma tarefa maior.
-\end{itemize}
 \end{slide}
 
-\begin{slide}{Tanenbaum e o MINIX}
-
-\begin{vslide}
-\textbf{Andrew D. Tanenbaum}, em 1987, escreveu o livro {\color{blue}Operating Systems: Design and Implementation}\\ (``Sistemas Operacionais: Projeto e Implementação'').
-\\
-\vspace{.5cm}
-MINIX foi usado como material de apoio ao livro.
-
-\vspace{0.5cm}
-Inspirado no MINIX, \textbf{Linus Torvalds} criou seu próprio sistema operacional, o \textit{kernel} do \textbf{Linux}.
-\vspace{0.5cm}
-\end{vslide}
-
+\begin{slide}{\Large A situação atual}
+  % \twocolumn{
+  \onslide{1-}{Quais são os problemas encontrados no que diz respeito a:}
+  \vspace{1.5cm}
+  
+  \onslide{2-}{Velocidade}
+  \vspace{1cm}
+  
+  \onslide{3-}{Segurança/Falhas}
+  \vspace{1cm}
+  
+  \onslide{4-}{Controle}
+  \vspace{1cm}
+  
+  \onslide{5-}{TEMPO}
 \end{slide}
 
-\begin{slide}{Tanenbaum e o MINIX}
+\begin{slide}{\Large A solução}
+   \vspace{.2cm}
 
-\footnotesize \emph{Hello everybody out there using minix -
- I'm doing a (free) operating system (just a hobby, won't be big and professional like gnu) for 386(486) AT clones. This has been brewing since april, and is starting to get ready. I'd like any feedback on things people like/dislike in minix, as my OS resembles it somewhat (same physical layout of the file-system (due to practical reasons) among other things).}
-
-\vspace{0.5cm}
- \emph{I've currently ported bash(1.08) and gcc(1.40), and things seem to work. This implies that I'll get something practical within a few months, and I'd like to know what features most people would want. Any suggestions are welcome, but I won't promise I'll implement them :-)}
-\vspace{0.5cm}
-
- \emph{Linus (torvalds@kruuna.helsinki.fi)
- PS. Yes – it's free of any minix code, and it has a multi-threaded fs. It is NOT portable (uses 386 task switching etc), and it probably never will support anything other than AT-harddisks, as that's all I have :-(.
+   \onslide{2-}{Tipografia}
+  \vspace{1.5cm}
+  
+  \onslide{3-}{Facilidade de leitura}
+  \vspace{1.5cm}
+  
+  \onslide{5-}{Ser entendido}
+  \vspace{1.5cm}
+  
+  \onslide{6-}{Ser ouvido}
 }
-\vspace{0.2cm}
-
- \emph{— Linus Torvalds}
 \end{slide}
 
-\section{Conhecendo o Linux}
-
-\begin{slide}{GNU/Linux}
-
-\begin{vslide}
-O Linux que conhecemos na verdade é o \textbf{GNU/Linux}.
-
-\vspace{0.5cm}
-
-A maioria das distribuições utilizam o \textit{kernel} do Linux em conjunto com \textit{softwares} GNU.
-\end{vslide}
-
-\end{slide}
-
-\begin{slide}{Projeto GNU}
-\begin{vslide}
-Iniciado em 1983 por \textbf{Richard Stallman} enquanto trabalhava no laboratório de inteligência artificial no MIT.
-
-\vspace{0.5cm}
-\begin{itemize}
-\item \textit{Software} livre
-\item \textit{Software} proprietário
-\end{itemize}
-
-\vspace{0.5cm}
-Stallman também criou a ``Free Software Foundation'' que administra as licenças GNU, como a GPL (\textit{General Public License}).
-\end{vslide}
-\end{slide}
-
-\begin{slide}{Kernel}
-
-
-   \begin{figure}[!h]
-  \includegraphics[scale=.8]{imagens/kernel1}
-   \end{figure}
-
-\end{slide}
-
-\begin{slide}{Distribuições}
-\begin{vslide}
-O que se conhece popularmente como Linux, é na verdade apenas o \textit{kernel}, utilizado em todas as distribuições.
-
-\vspace{0.5cm}
-Distribuições nada mais são que o \textit{kernel} do Linux juntamente com alguns outros \textit{softwares} (em sua maioria GNU, mas não necessariamente) que dão funcionalidade ao sistema.
-
-   \begin{figure}[!h]
-  \includegraphics[scale=0.4]{imagens/distro}
-   \end{figure}
-\end{vslide}
-\end{slide}
-
-\begin{slide}{Desktop Environment}
-  \centering
-   \begin{figure}[!h]
-  \includegraphics[scale=0.28]{imagens/gnome}
-   \end{figure}
-\end{slide}
-
-\begin{slide}{Desktop Environment}
-  \centering
-   \begin{figure}[!h]
-  \includegraphics[scale=0.3]{imagens/xfce}
-   \end{figure}
-\end{slide}
-
-\begin{slide}{Desktop Environment}
-  \centering
-   \begin{figure}[!h]
-  \includegraphics[scale=0.28]{imagens/cinnamon}
-   \end{figure}
-\end{slide}
-
-\begin{slide}{Window Manager}
-\begin{vslide}
-
-Window Manager gerencia funções como:
-
-\begin{itemize}
-\item Aparência de janelas.
-\item Comportamento na troca de janelas (alt + Tab).
-\end{itemize}
-
-\end{vslide}
-\end{slide}
-
-\begin{slide}{Alternativas de uso}
-\begin{vslide}
-
-\begin{itemize}
-\item Máquina Virtual
-\item Dual-boot
-\item Wine
-\end{itemize}
-
-\end{vslide}
-\end{slide}
-
-\end{document}
+ \end{document}
