parte dos slides sobre como surgiu o latex

--- a/2013-2/slides_latex_2013-2.tex
+++ b/2013-2/slides_latex_2013-2.tex
@@ -134,18 +134,27 @@ style=paintings
 
 \begin{slide}{\Large A solução}
    \vspace{.2cm}
+\twocolumn{
+{   \onslide{2-}{\Large Donald Knuth}
+   \vspace{1.5cm}}
+   
+   \onslide*{4-}{The Art of Computer Programming}
+   \vspace{1.5cm}
 
-   \onslide{2-}{Tipografia}
-  \vspace{1.5cm}
-  
-  \onslide{3-}{Facilidade de leitura}
-  \vspace{1.5cm}
-  
-  \onslide{5-}{Ser entendido}
-  \vspace{1.5cm}
-  
-  \onslide{6-}{Ser ouvido}
+   {\onslide*{5-}{\LARGE\TeX}}
+   
+   \begin{figure}[!h]
+     \onslide*{3}{\includegraphics[scale=.14]{resources/taocp}}
+   \end{figure}
+   \vspace{1.5cm}
 }
+{
+        \begin{figure}[!h]
+          \onslide*{2}{\includegraphics[scale=.3]{resources/youngknuth}}
+          \onslide*{3}{\includegraphics[scale=.3]{resources/knuth}}
+        \end{figure}
+}
+
 \end{slide}
 
- \end{document}
+\end{document}
