\end{document} perdido em um dos arquivos

--- a/2013-2/contents/handout_latex_2013-2.bib
+++ b/2013-2/contents/handout_latex_2013-2.bib
@@ -35,7 +35,7 @@
   year = {2014},
   owner = {gabriel},
   timestamp = {2014.01.29},
-  url = {http://en.wikipedia.org/wiki/Comparison_of_TeX_editors}
+  url = {http://en.wikipedia.org/wiki/Comparison\_of\_TeX\_editors}
 }
 
 @MISC{xetex,
