--- a/2013-2/handout_latex_2013-2.tex
+++ b/2013-2/handout_latex_2013-2.tex
@@ -51,7 +51,7 @@ Os conteúdos são dispostos aqui apenas como um apanhado geral com o objetivo d
 
 \input{contents/pratica} %Parte prática:
 
-
+\nocite{xetex}
 \nocite{_transition}
 \bibliography{contents/handout_latex_2013-2}
 
