pastas renomeadas e arquivos atualizados

--- a/2013-2/handout_latex_2013-2.tex
+++ b/2013-2/handout_latex_2013-2.tex
@@ -42,16 +42,16 @@ Os conteúdos são dispostos aqui apenas como um apanhado geral com o objetivo d
 
 
 
-\input{contents/intro_writing} %Introdução à escrita científica
+\input{contents/intro_escrita} %Introdução à escrita científica
 
 \input{contents/tex} %TeX ao resgate!
+
 \input{contents/instalacao} %Básicos da instalação
 
 \input{contents/problemas} %Problemas comuns dos editores WYSIWYG
 
 \input{contents/pratica} %Parte prática:
 
-\nocite{xetex}
 \nocite{_transition}
 \bibliography{contents/handout_latex_2013-2}
 
