--- a/2013-2/slides_latex_2013-2.tex
+++ b/2013-2/slides_latex_2013-2.tex
@@ -105,13 +105,13 @@ style=paintings
   }
   {
           \begin{figure}[!h]
-            \onslide*{2}{ \includegraphics[scale=.14]{resources/typo}}
-            \onslide*{3}{ \includegraphics[scale=.28]{resources/comparison}}
-            \onslide*{4-}{ \includegraphics[scale=.4]{resources/readibility}}
+            \onslide*{2}{ \includegraphics[scale=.14]{recursos/typo}}
+            \onslide*{3}{ \includegraphics[scale=.28]{recursos/comparison}}
+            \onslide*{4-}{ \includegraphics[scale=.4]{recursos/readibility}}
           \end{figure}
 
           \begin{figure}[!h]
-            \onslide*{2}{\includegraphics[scale=.5]{resources/ligature}}
+            \onslide*{2}{\includegraphics[scale=.5]{recursos/ligature}}
           \end{figure}
   }
 \end{slide}
@@ -144,15 +144,15 @@ style=paintings
           {\onslide*{5-}{\LARGE\TeX}}
 
           \begin{figure}[!h]
-            \onslide*{3}{\includegraphics[scale=.16]{resources/taocp}}
+            \onslide*{3}{\includegraphics[scale=.16]{recursos/taocp}}
           \end{figure}
           \vspace{1.5cm}
   }
   {
           \begin{figure}[!h]
-            \onslide*{2}{\includegraphics[scale=.4]{resources/youngknuth}}
-            \onslide*{3}{\includegraphics[scale=.3]{resources/knuth}}
-            \onslide*{6}{\includegraphics[scale=.3]{resources/lamport}}
+            \onslide*{2}{\includegraphics[scale=.4]{recursos/youngknuth}}
+            \onslide*{3}{\includegraphics[scale=.3]{recursos/knuth}}
+            \onslide*{6}{\includegraphics[scale=.3]{recursos/lamport}}
           \end{figure}
           \hspace{1.8cm}{\onslide*{6-}{\LARGE\LaTeX}}
   }
