atualizacao com nome da pasta

--- a/2013-2/handout_latex_2013-2.tex
+++ b/2013-2/handout_latex_2013-2.tex
@@ -42,17 +42,17 @@ Os conteúdos são dispostos aqui apenas como um apanhado geral com o objetivo d
 
 
 
-\input{contents/intro_escrita} %Introdução à escrita científica
+\input{conteudo/intro_escrita} %Introdução à escrita científica
 
-\input{contents/tex} %TeX ao resgate!
+\input{conteudo/tex} %TeX ao resgate!
 
-\input{contents/instalacao} %Básicos da instalação
+\input{conteudo/instalacao} %Básicos da instalação
 
-\input{contents/problemas} %Problemas comuns dos editores WYSIWYG
+\input{conteudo/problemas} %Problemas comuns dos editores WYSIWYG
 
-\input{contents/pratica} %Parte prática:
+\input{conteudo/pratica} %Parte prática:
 
 \nocite{_transition}
-\bibliography{contents/handout_latex_2013-2}
+\bibliography{conteudo/handout_latex_2013-2}
 
 \end{document}
