secao pratica finalizada com baby-steps

--- a/2013-2/partePratica/03BoldItalic.tex
+++ b/2013-2/partePratica/03BoldItalic.tex
@@ -1,4 +1,4 @@
-% mostra conceitos sobre acentuacao e pacotes
+% mostra conceitos sobre negrito, italico e destaques de fonte em geral
 
 \documentclass{article}
 
