minor fixes de pontuação, concordância e etc.

--- a/2013-2/conteudo/intro_escrita.tex
+++ b/2013-2/conteudo/intro_escrita.tex
@@ -25,7 +25,7 @@ Observe na página seguinte as diferenças com relação aos elementos de format
 
 Além disso, outro detalhe importante é a seção de referências. Cada congresso dispõe de maneiras diferentes para apresentação e citação das mesmas. Após a comparação entre a formatação dos textos, mostra-se, na página \pageref{referencias} as diferenças entre as referências das normas.
 
-Repare como a citação do IEEE, na parte superior, ainda utiliza o formato de duas colunas, possui citação numérica, cita mais do que um autor e mostra maiores informações sobre a publicação em si. A norma da SBC, no meio, se parece mais com o padrão da UTFPR por ambas terem base na ABNT. As citações são por nome do autor e ano da publicação, e com menos informações sobre a obra. Por fim, as normas da UTFPR ressaltam o congresso publicado em negrito, autor todo em maiúsculo e ainda mostra maiores informações de metadados.
+Repare como a citação do IEEE, na parte superior, ainda utiliza o formato de duas colunas, possui citação numérica, cita mais do que um autor e mostra maiores informações sobre a publicação em si. A norma da SBC, no meio, se parece mais com o padrão da UTFPR por ambas terem base na ABNT. As citações são por nome do autor e ano da publicação, e com menos informações sobre a obra. Por fim, as normas da UTFPR ressaltam o congresso publicado em negrito, autor todo em maiúsculo e mais metadados.
 
 {\clearpage
 \label{cabecalhos}
@@ -59,7 +59,7 @@ Repare como a citação do IEEE, na parte superior, ainda utiliza o formato de d
 \clearpage}
 \restoregeometry
 
-Tendo em vista todos estes detalhes a serem levados em consideração bem como o fato de que os textos muitas vezes são escritos de maneira apressada devido a prazos curtos, como no caso de artigos ou relatórios de iniciação científica, fica claro que a utilização de ferramentas que automatizem e facilitem este processo serão sempre bem vindas. Uma destas ferramentas é o \LaTeX.
+Tendo em vista todos estes detalhes a serem levados em consideração bem como o fato de que os textos muitas vezes são escritos de maneira apressada devido a prazos curtos, como no caso de artigos ou relatórios de iniciação científica, fica claro que a utilização de ferramentas que automatizem e facilitem este processo de formatação serão sempre bem vindas. Uma destas ferramentas é o \LaTeX.
 
 %Estes são apenas alguns dos detalhes que são exigidos e fica claro que a correta formatação de um documento é um processo que acaba ocupando uma grande parte do tempo dedicado à escrita do mesmo e a utilização de ferramentas que automatizem e facilitem este processo são sempre bem vindas. Uma destas ferramentas é o \LaTeX.
 
