--- a/2013-2/conteudo/problemas.tex
+++ b/2013-2/conteudo/problemas.tex
@@ -1,6 +1,6 @@
 \section{WYSIWYG}
 
-A maioria dos softwares responsáveis por processamento de palavras utilizam uma interface que permite que o usuário veja algo muito similar ao resultado final enquanto o documento está sendo criado. Essa interface pode ser chamada de WYSIWYG (``What You See Is What You Get'', ou em uma tradução literal, ``O que você vê é o que você obtém''). Um exemplo de programa que se encaixa nesta classificação é o \textbf{MS Word}.
+A maioria dos softwares responsáveis por processamento de palavras utilizam uma interface que permite que o usuário veja algo muito similar ao resultado final enquanto o documento está sendo criado. Essa interface pode ser chamada de WYSIWYG (``What You See Is What You Get'', ou em uma tradução literal, ``O que você vê é o que você obtém''). Um exemplo de programa que se encaixa nesta classificação é o \textbf{MS Word} ou \textbf{LibreOffice}.
 
 Em editores WYSIWYG, pedaços de códigos são inseridos no documento para indicar onde a fonte deve mudar de tamanho, onde usar itálico, ou negrito, etc. Esses pedaços de código não são vistos pelo usuário em momento algum, portanto só é possível editar esse arquivo utilizando o próprio software que o criou. Com o \LaTeX, o documento consiste de apenas um arquivo de texto, que pode ser modificado com qualquer editor. É possível dizer, então, que WYSIWYW (``What You See Is What You Want'', ou ``O que você vê é o que você quer'').
 
