--- a/2013-2/partePratica/10Referencias.tex
+++ b/2013-2/partePratica/10Referencias.tex
@@ -70,7 +70,7 @@
 		\end{table}
 	
 	\section{Referências}
-		A maneira mais eficaz de fazer referências no \LaTeXe é utilizar um arquivo principal de referências \textsf{.bib}, editá-lo com o \textsf{JabRef} e incluí-lo no \textsf{.tex} com \newline\verb|\bibliography{nome_do_.bib}|. 
+		A maneira mais eficaz de fazer referências no \LaTeXe é utilizar um arquivo principal de referências \textsf{.bib}, editá-lo com o \textsf{JabRef} e incluí-lo no \textsf{.tex} com \newline\verb|\bibliography{nome_do_bib}|. 
 		
 		Normalmente, precisa-se também indicar a formatação dos estilos por \verb|\bibliographystyle{Algum_Tipo}|.
 
