Secao de conclusao com dicas e websites gerais finalizada. Parte pratica recebeu conteudo separado.

--- a/2013-2/handout_latex_2013-2.tex
+++ b/2013-2/handout_latex_2013-2.tex
@@ -42,15 +42,17 @@ Os conteúdos são dispostos aqui apenas como um apanhado geral com o objetivo d
 
 
 
-\input{conteudo/intro_escrita} %Introdução à escrita científica
+\input{conteudo/intro_escrita} % Introdução à escrita científica
 
-\input{conteudo/tex} %TeX ao resgate!
+\input{conteudo/tex} % TeX ao resgate!
 
-\input{conteudo/instalacao} %Básicos da instalação
+\input{conteudo/instalacao} % Básicos da instalação
 
-\input{conteudo/problemas} %Problemas comuns dos editores WYSIWYG
+\input{conteudo/problemas} % Problemas comuns dos editores WYSIWYG
 
-\input{conteudo/pratica} %Parte prática:
+%\input{conteudo/pratica} % Parte prática
+
+\input{conteudo/conclusao} % Conclusao
 
 \nocite{_transition}
 \bibliography{conteudo/handout_latex_2013-2}
