typos handout e parte pratica script comentado

--- a/2013-2/conteudo/conclusao.tex
+++ b/2013-2/conteudo/conclusao.tex
@@ -1,5 +1,5 @@
 \section{Conclusão e dicas finais}
-Brevemente apresentou-se a parte lógica de como o \LaTeX funciona, qual seu foco principal, onde e porque utilizar, instalação básica e suas diferenças entre editores comuns de texto WYSIWYG. Como apontado inicialmente este material não é de nenhuma forma ostensivo e deve ser utilizado apenas de maneira introdutória.
+Brevemente apresentou-se a parte lógica de como o \LaTeX\space funciona, qual seu foco principal, onde e porque utilizar, instalação básica e suas diferenças entre editores comuns de texto WYSIWYG. Como apontado inicialmente este material não é de nenhuma forma ostensivo e deve ser utilizado apenas de maneira introdutória.
 
 Aprofundamentos podem ser encontrados em \url{http://tug.org/}, enquanto que maiores detalhes da produção de texto podem ser explorados em \newline\url{http://en.wikibooks.org/wiki/LaTeX}. Para dúvidas gerais, erros de compilação e questões similares o site \tex\space da \textsf{StackExchange} \url{http://tex.stackexchange.com/} possui grande base de questões.
 
