--- a/2013-2/partePratica/10Referencias.tex
+++ b/2013-2/partePratica/10Referencias.tex
@@ -13,7 +13,7 @@
 	\section{Acentuação}		
 		Ele será incrementado a cada etapa nesse minicurso super legal.
 	
-	\section{Negrito, Itálico, Ê1nfase}
+	\section{Negrito, Itálico, Ênfase}
 		A codificação no \textbf{Linux} deve \huge sempre \normalsize ser utilizada em \textbf{UTF-8} para acentuação \emph{correta}. No \textit{Windows} a \emph{maioria} dos casos utiliza-se o \textit{Latin1}.
 		
 	\section{\textit{Environment}}
