--- a/2014-1/handout_linux_2014-1.tex
+++ b/2014-1/handout_linux_2014-1.tex
@@ -143,9 +143,9 @@ Uma desvantagem que pode ser citada é que não é possível executar os dois si
 
 \subsection{Live CD}
 
-Um Live CD é basicamente uma disto Linux instalada em um CD, desse modo é possível utilizar a distro Linux sem ter que instala-la. Apesar de algumas distros não anunciarem um Live CD a própria iso funciona como um Live CD, por exemplo as distro Ubuntu e Mint não anunciam um Live CD, mas ao colocar a iso em um CD pode-se testa-la sem instalar.
+Um Live CD é uma disto Linux instalada em uma mídia externa como um CD ou pendrive, desse modo é possível utilizar a distro Linux sem ter que instala-la. Apesar de algumas distros não anunciarem possuir um Live CD a iso `normal' funciona como um Live CD, por exemplo as distro Ubuntu e Mint não anunciam um Live CD, mas ao colocar a iso em uma mídia pode-se testa-la sem a necessidade de instalar.
 
-Um Live CD não precisa ser, estritamente, gravado em um CD, por exemplo um pendrive funcionará do mesmo modo, além de ser mais pratico. A principal desvantagem dese método é a velocidade baixa de execução, pois é necessário ficar constantemente lendo a mídia utilizada, que normalmente é mais lenta do que um HD.
+A principal desvantagem é que a execução é lenta, pois fica limitada a mesma velocidade de leitura da mídia utilizada, que acaba sendo menor do que a velocidade de leitura de um HD.
 
 
 \begin{figure}[!h]
@@ -155,22 +155,26 @@ Um Live CD não precisa ser, estritamente, gravado em um CD, por exemplo um pend
   \label{fig:ubuntu-live}
 \end{figure}
 
-Na imagem \ref{fig:ubuntu-live} é possível ver a distro Ubuntu mostrando uma opção para testar o Ubuntu sem instala-lo. Algumas distros permitem instalar mesmo após ter sido iniciado como um live CD.
+Na imagem~\ref{fig:ubuntu-live} é possível ver a distro Ubuntu mostrando uma opção para testar o Ubuntu sem instala-lo. Algumas distros permitem instalar mesmo após ter sido iniciado como um live CD.
 
+% (TODO Adicionar mais informações sobre alterar a ordem de boot?).
 \begin{itemize}
     \item Colocar a mídia com o live CD no computador.
-    \item Iniciar o computador através daquela mídia, pode ser necessário alterar a ordem de boot na bios (TODO Adicionar mais informações ?).
+    \item Iniciar o computador através daquela mídia, pode ser necessário alterar a ordem de boot na bios.
     \item Escolher a opção testar, se existir.
 \end{itemize}
 
 \subsection{Instalação}
 O modo de instalar o Linux irá variar dependendo da distro usada, pois cada uma tem um instalador diferente. Alguns instaladores provem uma interface gráfica. Enquanto outros tem apenas uma linha de comando.
 
-A instalação começa com o particionamento do disco rígido, particionar é dividir o espaço total em espaços menores, normalmente isto é feito para que cada espaço tenha uma utilização diferente. Exemplo: normalmente ao fazer \emph{Dual-Boot} existe uma partição onde fica o Windows e outra onde fica o Linux.
+A instalação começa com o particionamento do disco rígido, particionar é dividir o espaço total em pedaços de espaço menor. Normalmente isto é feito para que cada espaço tenha uma utilização diferente. Exemplo: normalmente ao fazer \emph{Dual-Boot} existe uma partição para o Windows e outra para o Linux.
 
-Após particionar o HD deve-se formatar a partição, o que basicamente significa apagar todos os dados que existem nela, e escolher um sistema de arquivo para a partição, um sistema de arquivo é quem decide como armazenar os dados naquele partição, existem vários sistemas de arquivo sugerimos o ext4 por ser o mais novo e estável.
+Após particionar o HD deve-se formatar a partição, o que significa apagar todos os dados que existem na partição, tome cuidado para não formatar a partição errada poise se isso acontecer todos os dados serão apagados. E escolher um sistema de arquivo para a partição, um sistema de arquivo é quem decide como armazenar os dados naquele partição, existem vários sistemas de arquivo sugerimos o ext4 por ser o mais novo e estável. 
 
-Após isso a partição criada deve ser escolhida para como local de instalação, depois é so esperar a instalação acabar, pode ser necessário responder algumas perguntas para ajeitar o fuso horário, teclado, etc...
+Após isso a partição criada deve ser escolhida para como local de montagem da `/', a \emph{root} ou raiz é o ponto inicial do sistema, todo o resto é criado a partir da raiz. Pense nela como o c:\textbackslash do windows. A partição `/' deve ser grande o suficiente para acomodar a distro mais eventuais programas que serão instalados, escolha um tamanho de acordo com seu HD, note que o mínimo aconselhável ficaria em torno dos 10G.
+
+Uma segunda partição deve ser criada, com tamanho médio de 5G, ao formatar esta partição escolha o ponto de montagem como \emph{SWAP}, que será o local que o Linux usará para memoria virtual, basicamente usar o HD como se fosse memória RAM, caso esta fique cheia.
+
 
 TODO adicionar fotos da instalação.
 
